2014-10-03  Jean-Louis Martineau <martineau@zmanda.com>
	* amar-src/amar.c: Fix loop.
	* common-src/bsdtcp-security.c: Free res.
	* common-src/bsdudp-security.c: Free res.
	* recover-src/extract_list.c: Remove duplicate code.
	* server-src/amindexd.c: Remove unused allocation.
	* server-src/dumper.c: Remove always TRUE check.
	* server-src/tapefile.c: Remove unused allocation.

2014-10-03  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Cleanup.pm: Add it.

2014-10-03  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Cleanup.pm: new perl module for amcleanup
	  functionnality.
	* perl/Makefile.am: Add Amanda/Cleanup.pm.
	* server-src/amcleanup.pl: Use Amanda::Cleanup
	* perl/Amanda/Holding.pm (_walk): Do not list 'pid' file.
	* perl/Amanda/Message.pm: Add Amanda::Cleanup::Message and
	  Amanda::Process::Message.
	* perl/Amanda/Process.pm: Send Amanda::Message.
	* perl/Amanda/Rest/Amanda/bin/app.pl.in: Add
	  DELETE /amanda/v1.0/config/:CONF/runs
	* perl/Amanda/Rest/Runs.pm: Add kill functionnality.

2014-10-02  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amcheck.c: Fix type casting.

2014-10-02  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Rest/Amcheck.pm: Fix unshift.
	* perl/Amanda/Rest/Configs.pm: Fix severity.

2014-10-02  Jean-Louis Martineau <martineau@zmanda.com>
	* client-src/sendbackup.c: Fix small bug found by coverity.
	* common-src/ammessage.c: typo.
	* server-src/amcheck.c: typo, remove unused variable.

2014-10-02  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/ammessage.c : Print severity as name.
	* perl/Amanda/Message.pm: severity constant are name.
	* installcheck/Amanda_Rest_Amcheck.pl,
	   installcheck/Amanda_Rest_Changers.pl,
	   installcheck/Amanda_Rest_Configs.pl,
	   installcheck/Amanda_Rest_Dles.pl,
	   installcheck/Amanda_Rest_Dumps.pl,
	   installcheck/Amanda_Rest_Labels.pl,
	   installcheck/Amanda_Rest_Runs.pl,
	   installcheck/Amanda_Rest_Storages.pl,