@@ -1,4 +1,9 @@
 2014-10-03  Jean-Louis Martineau <martineau@zmanda.com>
+	* common-src/bsdtcp-security.c: Free res.
+	* common-src/bsdudp-security.c: Free res.
+	* server-src/tapefile.c: Remove unused allocation.
+
+2014-10-03  Jean-Louis Martineau <martineau@zmanda.com>
 	* amar-src/amar.c: Fix loop.
 	* common-src/bsdtcp-security.c: Free res.
 	* common-src/bsdudp-security.c: Free res.
